<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp"
    tools:context=".ui.setup.SetupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/permissions_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setup_permissions" />

        <ImageView
            android:id="@+id/permissions_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:src="@drawable/ic_question_mark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passphrase_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setup_passphrase" />

        <ImageView
            android:id="@+id/passphrase_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:src="@drawable/ic_question_mark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/assets_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setup_assets" />

        <ImageView
            android:id="@+id/assets_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:src="@drawable/ic_question_mark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/plugins_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setup_plugins" />

        <ImageView
            android:id="@+id/plugins_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:src="@drawable/ic_question_mark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/configs_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setup_configs" />

        <ImageView
            android:id="@+id/configs_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:src="@drawable/ic_question_mark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/persona_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setup_persona" />

        <ImageView
            android:id="@+id/persona_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:src="@drawable/ic_question_mark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/channels_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setup_channels" />

        <ImageView
            android:id="@+id/channels_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:src="@drawable/ic_question_mark" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/current_action_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>